--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 
 html {
 	background-image: url('../images/keg-taps-scaled.jpeg');
+	background-color: black;
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
@@ -15,15 +16,6 @@ body {
 
 #container {
 	position: relative;
-}
-
-#layer {
-	background-color: rgba(64, 64, 64, 0.7);
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
 }
 
 #title {
